--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,20 +32,20 @@ jobs:
             goos: linux
             goarch: amd64
             cgo: 1
-            out_name: term-linux-amd64
-            archive: tar.gz
+            out_name: term
+            # archive: tar.gz
           - os: windows-latest
             goos: windows
             goarch: amd64
             cgo: 0
-            out_name: term-windows-amd64.exe
-            archive: zip
+            out_name: term.exe
+            # archive: zip
           - os: macos-latest
             goos: darwin
             goarch: arm64
             cgo: 1
-            out_name: term-darwin-arm64
-            archive: zip
+            out_name: term
+            # archive: zip
 
     steps:
       - name: Checkout
@@ -72,7 +72,7 @@ jobs:
             build-essential \
             pkg-config \
             libgtk-3-dev \
-            libwebkit2gtk-4.0-dev
+            libwebkit2gtk-4.1-dev
       
       - name: Install Wails CLI
         run: |
@@ -81,10 +81,6 @@ jobs:
       - name: Install frontend dependencies
         working-directory: frontend
         run: npm ci
-
-      - name: Build frontend
-        working-directory: frontend
-        run: npm run build
 
       - name: Go build
         env:
