--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,15 +17,15 @@ on:
         type: boolean
         default: false
 
-permissions:
-  contents: write
+# permissions:
+#   contents: write
 
 jobs:
   build:
     name: Build (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
-    permissions:
-      contents: read
+    # permissions:
+    #   contents: read
     strategy:
       fail-fast: false
       matrix:
@@ -118,8 +118,8 @@ jobs:
     name: Create GitHub Release
     needs: build
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    # permissions:
+    #   contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
